# utils_harness

./: .gitignore  README.md  pyproject.toml  test_api.py
doc/: AGENTS.md
doc/plan/: README.md  task-01-project-init.md  task-02-llm-client.md  task-03-prompt-templates.md  task-04-conversation.md  task-05-agents-generator.md  task-06-plan-generator.md  task-07-jinja-templates.md  task-08-file-ops.md  task-09-cli-main.md  task-10-tests.md  task-11-context-memory-optimization.md
harness/: __init__.py
harness/cli/: main.py
harness/core/: __init__.py  conversation.py  exceptions.py  generator.py  memory.py  planner.py
harness/llm/: __init__.py  client.py  prompts.py
harness/templates/: agents_md.j2  plan.j2  plan_readme.j2
harness/utils/: config.py  file_ops.py
tests/: conftest.py  test_cli.py  test_conversation.py  test_file_ops.py  test_generator.py  test_integration.py  test_jinja_templates.py  test_llm_client.py  test_memory.py  test_planner.py  test_project_init.py  test_prompts.py
